# uso-de-clases-QObject

./: CMakeLists.txt  README.md  estacion1.cpp  estacion1.h  estacion2.cpp  estacion2.h  estacion3.cpp  estacion3.h  main.cpp
